fix gap

--- a/css/pages/home/about.css
+++ b/css/pages/home/about.css
@@ -4,6 +4,8 @@
     align-items: center;
     justify-content: space-between;
 
+    padding-top: 150px;
+
     position: relative;
 }
 
